<resources>
    <string name="app_name">Med-Manager</string>
    <string name="login_page">Login Page</string>
    <string name="welcome">Welcome</string>
    <string name="add_medication">Add Medication</string>
    <string name="add">Add</string>
    <string name="new_medication">New Medication:</string>
    <string name="name_of_medicine">Name of Medicine:</string>
    <string name="description">Description:</string>
    <string name="frequency">Frequency/Interval:</string>
    <string name="start_date">Start Date:</string>
    <string name="end_date">End Date:</string>
    <string name="profile_picture">Profile Picture Display</string>
    <string name="loading">Loading</string>
    <string name="sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="search_medication">Search for Medicine</string>

    <!-- TODO(user): replace with your real server client ID -->
    <!-- Server Client ID.  This should be a valid Web OAuth 2.0 Client ID obtained
         from https://console.developers.google.com/ -->
    <!--<string name="server_client_id">948863978074-84o50os5kqhfln5l0oqgfbt1a4ot8bv4.apps.googleusercontent.com</string>-->
    <!--<string name="server_client_id">1054952682027-mg26va51c991s4gpf2u3ldbqk5bif4qp.apps.googleusercontent.com</string>-->
    <string name="server_client_id">1054952682027-11fraa65ll0917cro1kg56rrosomlg4s.apps.googleusercontent.com</string>
</resources>
