<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/entire_margin"
    tools:context="com.regent.tech.med_manager.AddMedicationActivity">

    <TextView
        android:id="@+id/new_medication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_medication"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/new_medication">

        <TextView
            android:id="@+id/name_of_medicine"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/name_of_medicine" />

        <EditText
            android:id="@+id/input_name_of_medicine"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/describe_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/name">

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/description" />

        <EditText
            android:id="@+id/input_description"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="textCapSentences|textMultiLine"
            android:minLines="2"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/frequency_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/describe_detail"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/frequency"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/frequency"/>

        <EditText
            android:id="@+id/input_frequency"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/start_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/frequency_detail"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/start_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/start_date"/>

        <Button
            android:id="@+id/input_start_date"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="Enter Start Date"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/end_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/start_detail">

        <TextView
            android:id="@+id/end_date"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/end_date"/>

        <Button
            android:id="@+id/input_end_date"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="Enter end date"/>

    </LinearLayout>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>

</RelativeLayout>
